promote header to layer /  z-index issue in safari

--- a/web/src/scss/components/aside.scss
+++ b/web/src/scss/components/aside.scss
@@ -303,6 +303,7 @@ strong {
   top: 0;
   background-color: $lightbeige;
   border-bottom: 1px solid $darkblue;
+  transform: translateZ(0);
 
   @include md {
     height: fluid(119, $lg);
